Issue #SB-0000 fix: Css changes for course module Design Gap

--- a/src/app/enrolled-course-details-page/enrolled-course-details-page.scss
+++ b/src/app/enrolled-course-details-page/enrolled-course-details-page.scss
@@ -296,7 +296,6 @@
     --color: #467fb8;
   }
   .wrapper {
-    display: inline-flex;
     grid-template-columns: 100px 100px 100px auto;
     margin-bottom: -8px;
   }  
